--- a/style.css
+++ b/style.css
@@ -7,13 +7,27 @@
 .container{
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(6, 300px);
-    gap: 20px;
+    grid-template-rows: repeat(6, 150px);
+    gap: 10px;
+    margin: 20px;
 }
-.cards{
-
-}
-.cards img{
+ img{
     width: 100%;
     height: 100%;
+}
+.card_big{
+    grid-column: span 6;
+    grid-row: span 2;
+}
+.card_normal{
+    grid-column: span 2;
+    grid-row: span 2;
+}
+.card_small{
+    grid-column: span 2;
+    grid-row: span 1;
+}
+.card_smaller{
+    grid-column: span 1;
+    grid-row: span 1;
 }
